+ `build .` to enable local docker compose build testing.
helps with debugging #8739

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ x-environment-vars: &environment-vars
 
 x-defaults: &defaults
   image: eventyay/open-event-server:development
+  build: .
   restart: unless-stopped
   env_file:
     - .env
